2002-12-31  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/tcljava/tcl/lang/FuncSig.java (matchSignature):
	Move assignment checks into JavaInvoke.isAssignable().
	* src/tcljava/tcl/lang/JavaInvoke.java (convertTclObject,
	isAssignable):
	Query the class of an object passed to convertTclObject
	and use it to ensure that a Java object is assignable.
	Add isAssignable method for use in this class and FuncSig.
	* tests/tcljava/JavaInvoke.test: Move failing test
	invoke-9.18 down to the convertTclObject section.
	Add tests to check that Java argument objects
	can be assigned to the argument types of the method.
	Also check that null cannot be assigned to a
	primitive argument type.

2002-12-31  Mo DeJong  <mdejong@users.sourceforge.net>

	* new_features.txt: Add note about TclObject passing.
	* src/tcljava/tcl/lang/JavaInvoke.java (convertTclObject):
	Add support for passing a TclObject directly to a
	Java method. If the TclObject contains a ReflectObject
	that contains a TclObject, then the TclObject inside
	the ReflectObject is passed for backwards compatibility.
	* src/tests/tcljava/tests/signature/PassTclObject.java:
	Add helper class for test cases.
	* tests/tcljava/JavaInvoke.test:
	Test implementation of convertTclObject as it applies
	to passing of a TclObject.

2002-12-31  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/native/javaInterp.c (
	Java_tcl_lang_Interp_evalNative,
	Java_tcl_lang_Interp_evalString,
	Java_tcl_lang_Interp_evalTclObject):
	Rename evalNative to evalString.
	Add evalTclObject method to support
	direct evaluation of a Tcl_Obj*
	wrapped in a TclObject. This significantly
	speeds up Java commands that call eval
	with a TclObject argument because the
	data does not need to be copied into
	Java and then back into Tcl.
	* src/tclblend/tcl/lang/Interp.java (evalNative,
	evalString, evalTclObject, eval):
	Invoke new evalTclObject method from
	eval call that takes a TclObject argument.

2002-12-31  Mo DeJong  <mdejong@users.sourceforge.net>